[package]
name = "time-bank-progress"
version = "0.1.0"
edition = "2021"

[dependencies]
# webapp
leptos = { version = "0.5.0-beta", features = ["csr"] }
leptos_router = { version = "0.5.0-beta", features = ["csr"] }
url = "2.4.0"

# time
chrono = "0.4.26"
chrono-tz = "0.8.3"

# optimizations
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
